plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'checkstyle'
	id 'pmd'
	id 'com.github.spotbugs' version '6.0.27'
	id 'jacoco'
	id 'org.sonarqube' version '7.2.3.7755'
}

group = 'com.pm4'
version = '0.0.1-SNAPSHOT'
description = 'Interactive Security Training Platform Spring Boot Project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-h2console'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-scalar:2.8.16'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'io.fabric8:kubernetes-client:6.10.0'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << '-parameters'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		xml.outputLocation = layout.buildDirectory.file('reports/jacoco/test/jacocoTestReport.xml')
	}
}

// ─── SonarQube ────────────────────────────────────────────────────────────────
sonar {
	properties {
		property 'sonar.projectKey', 'pm4-it24awin-istp'
		property 'sonar.host.url', 'https://sonarqube.pm4.init-lab.ch'
		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
	}
}

// ─── Spotless (google-java-format) ────────────────────────────────────────────
spotless {
	java {
		googleJavaFormat('1.28.0')
		target 'src/main/**/*.java'
	}
}

// ─── Checkstyle ───────────────────────────────────────────────────────────────
checkstyle {
	toolVersion = '10.14.2'
	configFile = file('config/checkstyle/checkstyle.xml')
	configProperties = [
		'checkstyle.suppression.file': file('config/checkstyle/suppressions.xml').absolutePath
	]
	ignoreFailures = false // Checkstyle violations break the build
}

tasks.named('checkstyleTest').configure { enabled = false }

// ─── PMD ──────────────────────────────────────────────────────────────────────
pmd {
	toolVersion = '7.3.0'
	ruleSetFiles = files('config/pmd/ruleset.xml')
	ruleSets = []         // clear the default quickstart ruleset
	ignoreFailures = true // violations are warnings, not build failures
	consoleOutput = true  // print violations to the CI log
}

tasks.named('pmdTest').configure { enabled = false }

// ─── SpotBugs ─────────────────────────────────────────────────────────────────
spotbugs {
	toolVersion = '4.8.6'
	ignoreFailures = true  // violations are warnings, not build failures
	effort = 'max'
	reportLevel = 'medium'
	excludeFilter = file('config/spotbugs/exclude.xml')
}

tasks.named('spotbugsTest').configure { enabled = false }

tasks.named('spotbugsMain').configure {
	reports {
		html { required = true }
		xml  { required = false }
	}
}
